# coi-auditor

./: .env  .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  tasks.py
.devcontainer/: .env.container  Dockerfile  README.md  SETUP_GUIDE.md  devcontainer.json  requirements.txt  validate-container.py
docs/: COI_AUDIT_PROCESS_PLAN.md  dev-container-guide.md  example.md  fuzzy_matching_implementation.md  instructions.md  pdf_classification_system.md  research_document_layout_analysis.md  tasks.md
docs-dev/: coding-help-20250522-1451.md  ocr_research.md  ocr_research_2.md  planning.md  research.md  roocode-prompt-engineering.md  surya_ocr_issue.md  surya_ocr_issue_2.md
examples/: pdf_classifier_demo.py
output/: diagnostic_test.json  errors_report.csv  gaps_report.csv  gl_failure_analysis.json
scripts/: check_results.py  check_surya_ocr.py  check_surya_structure.py  validate_environment.py
src/coi_auditor/: __init__.py  audit.py  config.py  constants.py  dump_log.py  dump_pdf_text.py  excel_handler.py  main.py  ml_column_detector_prototype.py  ml_table_detector.py  pdf_classifier.py  pdf_parser.py  rich_handler_fixed.py  terminal_formatter.py  verify.py
src/coi_auditor/reports/: error_analysis_report.md
src/output/: gaps_report.csv
test_harness/: README.md
test_harness/evaluation_scripts/: evaluate.py  metrics_calculator.py  report_generator.py
test_harness/prototype_output/: FernandoHernandez_2024-09-19_page_0_tatr_detections.json  S&G Siding and Gutters_2023-10-18_page_0_tatr_detections.json
test_harness/reports/: evaluation_details_20250514_125410.csv  evaluation_results_20250514_125410.json
tests/: data_extraction_test.py  dit_test.py  skew_test.py  spell_test.py  surya_test.py  test_31w_end_to_end_validation.py  test_31w_insulation_detailed_analysis.py  test_31w_insulation_failure.py  test_31w_insulation_summary.py  test_aggregation_and_gap_analysis.py  test_env_and_config.py  test_excel_loading.py  test_fuzzy_matching.py  test_pdf_classifier.py  test_pdf_dir_scanning.py  test_pdf_extraction.py  test_pdf_parser_failures.py  test_pdf_text_extraction_scan.py  test_policy_type_detection.py
tests/fixtures/: test_subcontractors.backup.xlsx  test_subcontractors.xlsx
tests/fixtures/annotations/: FernandoHernandez_2024-09-19.json  S&G Siding and Gutters_2023-10-18.json
tests/harness/evaluation_scripts/: evaluate.py  metrics_calculator.py  report_generator.py
tests/validation/: test_configuration_fixes_validation.py  test_env_investigation.py  test_missing_env_validation.py
