[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coi-auditor"
version = "0.1.0"
description = "Certificate of Insurance auditing tool for subcontractors."
authors = [
    { name = "Preston Sparks", email = "mprestonsparks@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openpyxl==3.1.2",
    "pdfplumber==0.11.6",
    "python-dotenv==1.0.1",
    "pytesseract>=0.3.10",
    "paddleocr",
    "rich>=13.0.0",
    "tqdm>=4.60.0",
    "pdf2image>=1.16.0", # Added for PDF to image conversion
    "opencv-python>=4.5.0", # Added for image processing with PaddleOCR
    "rapidfuzz>=3.6.0" # Added for fuzzy matching capabilities
]

[project.optional-dependencies]
dev = [
    "invoke>=1.7.0", # For tasks.py
    "black>=23.0.0", # For formatting
    "pyright>=1.1.300" # For static type checking
]

[project.scripts]
coi-auditor = "coi_auditor.main:run_audit"
dump-coi-log = "coi_auditor.dump_log:main" # Assuming main function in dump_log.py

[tool.setuptools.packages.find]
where = ["src"]
